# work-agent

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  server.py
.superpowers/brainstorm/28533-1774389258/: .server-info  style-direction.html  style-sketchy.html
capabilities/: daily_planner.py  event_listener.py  issue_handler.py  pr_reviewer.py  slack_triage.py
config/: mcp.py  settings.py
prompts/: daily_planner.py  issue_handler.py  pr_reviewer.py  slack_triage.py
shared/: background.py  caffeinate.py  context_loader.py  custom_tools.py  notifications.py  skill_loader.py  state.py  stream_output.py
site/: index.html
tests/: test_agent_cli.py  test_background.py  test_context_loader.py  test_daily_planner.py  test_integration.py  test_issue_handler.py  test_notifications.py  test_pr_reviewer.py  test_server.py  test_settings.py  test_skill_loader.py  test_slack_triage.py  test_state.py
