[project]
name = "work-agent"
version = "0.1.0"
description = "Personal autonomous agent for Slack triage, PR review, issue handling, and daily planning"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "typer>=0.15.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.9.0",
]

[project.scripts]
agent = "agent:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120
